--- a/ConsoleApplication7/ConsoleApplication7.vcxproj
+++ b/ConsoleApplication7/ConsoleApplication7.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClCompile Include="Calc.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calc.h" />
