--- a/ConsoleApplication7/ConsoleApplication7.vcxproj.filters
+++ b/ConsoleApplication7/ConsoleApplication7.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Calc.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calc.h">
