--- a/ConsoleApplication7/ConsoleApplication7.vcxproj
+++ b/ConsoleApplication7/ConsoleApplication7.vcxproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calc.h" />
+    <ClInclude Include="Test.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
