--- a/ConsoleApplication7/ConsoleApplication7.vcxproj.filters
+++ b/ConsoleApplication7/ConsoleApplication7.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Calc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
